# AIdeckTestbed

./: .clang-format-ignore  .clang-tidy  .gitignore  .gitmodules  Benchmarks.h  LICENSE.md  Main.cpp  README.md  ai_deck.ini  etl_profile.h  hello.c  hello.cpp  meson.build  meson_80_60.build  resnet_meson.build  uart.ini
Core/: meson.build
Core/Containers/: HeapVector.h
Core/Device/: meson.build
Core/Device/CPU/: CPU.h
Core/Device/Camera/: Camera.cpp  Camera.h  meson.build
Core/Device/Cluster/: Cluster.cpp  Cluster.h  ClusterManager.cpp  ClusterManager.h  meson.build
Core/Device/Serial/: UART.cpp  UART.h
Core/Device/Timer/: Timer.cpp  Timer.h  meson.build
Core/Device/WIFI/: FrameStreamer.cpp  FrameStreamer.h  WIFI.cpp  WIFI.h  WIFISettings.h
Core/Heap/: L1Heap.h  L2Heap.h  meson.build
Core/Serial/: UART.cpp  UART.h
Core/Support/: Assertions.h  Kernel.h  NewDelete.cpp  Singleton.h  StackCanary.c  StackCanary.cpp  gap_sdk.h  meson.build
Core/Sync/: Mutex.cpp  Mutex.h  Spinlock.cpp  Spinlock.h  Sync.h
Documentation/: AIdeckPeripherals.md  Build.md  GAP8.md  Pitfalls.md  Project.md  Quirks.md  Toolchain.md
Gapack/: Matrix.cpp  Matrix.h  meson.build
Model/: CollisionModel.cpp  CollisionModel.h  nntool_script
Model/Data/: Misc.c  ResizeModel.c  ptq_int8.h  ptq_int8.tflite
PowerMeter/: find_power_usage.py  ina219_arduino.cpp
Scripts/: disassemble.sh  flash_to_board.sh  run_in_board.sh  run_in_gvsoc.sh  uart.ini
Source/: Benchmarks.h  Constants.h  Main.cpp  meson.build
Source/Core/Containers/: HeapVector.h
Source/Core/Device/: meson.build
Source/Core/Device/CPU/: CPU.h
Source/Core/Device/Camera/: Camera.cpp  Camera.h
Source/Core/Device/Cluster/: Cluster.cpp  Cluster.h  ClusterManager.h  meson.build
Source/Core/Device/Serial/: UART.cpp  UART.h  meson.build
Source/Core/Device/Timer/: Timer.cpp
Source/Core/Device/WIFI/: FrameStreamer.cpp  FrameStreamer.h  meson.build
Source/Core/Heap/: L2Heap.cpp
Source/Core/Support/: NewDelete.cpp  RealMain.cpp  Singleton.h  etl_includes.h  gap_sdk.h  meson.build
Source/Core/Sync/: Mutex.cpp  Mutex.h  Spinlock.cpp  meson.build
Source/Model/: CollisionModel.cpp  CollisionModel.h  CollisionModelGenerated.inc  meson.build
Source/Model/Data/: Constants.cpp  ResizeModel.c  current.txt  meson.build  ptq_int8.h
Toolchain/: BuildGAPSDK.sh  BuildToolchain.sh  BuildTools.sh  SourceToolchain.sh
Toolchain/Patches/: disable_flaky_werror.patch  riscv-gcc.patch  riscv_linker_script.patch
